[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false

[dependencies.byteorder]
package = "byteorder"
version = "=1.3.4"

[dependencies.tokio]
package = "tokio"
version = "=0.3.5"
features = ["full"]

[dependencies.itertools]
package = "itertools"
version = "=0.9.0"
